--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <div class="card">
                     <img src="img/burgpatacon.jpg" class="imagen-platillo u-full-width">
                     <div class="info-card">
+                        <h1>hola</h1>
                         <h4>Hamburguesa En patacon</h4>
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
